--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@
 	/* -------------------ABOUT ME PAGE----------------------- */
 
 		#about {
+			margin: 30px;
+			padding: 30px;
 			line-height: 1.33em;
 			-webkit-hyphens: auto;
 			-moz-hyphens: auto;
