--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,7 @@
 	/* -------------------ABOUT ME PAGE----------------------- */
 
 		#about {
-			margin-top: auto: 30px;
-			padding-top: 30px;
+			padding-top: 15%;
 			line-height: 1.33em;
 			-webkit-hyphens: auto;
 			-moz-hyphens: auto;
