--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ header h1 {
 	/* -------------------ABOUT ME PAGE----------------------- */
 
 	#about {
-		padding-top: 30px;
+		padding-top: 17%;
 		line-height: 1.33em;
 		-webkit-hyphens: auto;
 		-moz-hyphens: auto;
